packages/runtime/src/core/__fixtures__/errors/imported/error-module.js
export function throwError() {
  throw new Error('Error from imported module');
}
